--- a/index.html
+++ b/index.html
@@ -22,7 +22,5 @@
 </head>
 <body>
     <h2>*바이넥스 품질개선팀*</h2>
-    동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세. <P>
-    무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세.
-    </P>
+    손대리님~~~~~안..안.. 안정성~~~~자료 쫌...~!
 </body>
